--- a/hitagget/viewpost.ui
+++ b/hitagget/viewpost.ui
@@ -36,7 +36,7 @@
     </rect>
    </property>
    <property name="standardButtons">
-    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+    <set>QDialogButtonBox::Ok</set>
    </property>
   </widget>
   <widget class="QLabel" name="lblTitle">
@@ -126,6 +126,45 @@
    </property>
    <property name="text">
     <string>Comentarios:</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnLike">
+   <property name="geometry">
+    <rect>
+     <x>962</x>
+     <y>260</y>
+     <width>91</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Me gusta</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lblLikes">
+   <property name="geometry">
+    <rect>
+     <x>850</x>
+     <y>270</y>
+     <width>51</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Likes:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lblNumLikes">
+   <property name="geometry">
+    <rect>
+     <x>910</x>
+     <y>270</y>
+     <width>41</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>0</string>
    </property>
   </widget>
  </widget>
