--- a/hitagget/newpost.ui
+++ b/hitagget/newpost.ui
@@ -6,18 +6,22 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>999</width>
-    <height>550</height>
+    <width>658</width>
+    <height>285</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(21, 32, 43);
+color: rgb(255, 255, 255)</string>
+  </property>
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>640</x>
-     <y>500</y>
+     <x>300</x>
+     <y>240</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -33,9 +37,9 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>340</y>
-     <width>581</width>
-     <height>71</height>
+     <y>120</y>
+     <width>621</width>
+     <height>101</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -57,56 +61,12 @@ p, li { white-space: pre-wrap; }
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'MS Shell Dlg 2'; font-size:8.25pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_3">
-   <property name="geometry">
-    <rect>
-     <x>490</x>
-     <y>290</y>
-     <width>71</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Comic Sans MS</family>
-     <pointsize>14</pointsize>
-     <weight>50</weight>
-     <italic>false</italic>
-     <bold>false</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>Tema:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_4">
-   <property name="geometry">
-    <rect>
-     <x>470</x>
-     <y>310</y>
-     <width>21</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Comic Sans MS</family>
-     <pointsize>14</pointsize>
-     <weight>50</weight>
-     <italic>false</italic>
-     <bold>false</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>#</string>
-   </property>
-  </widget>
   <widget class="QLineEdit" name="txtPostTitle">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>50</y>
-     <width>231</width>
+     <width>621</width>
      <height>20</height>
     </rect>
    </property>
@@ -122,7 +82,7 @@ font: 8pt &quot;Comic Sans MS&quot;;</string>
      <x>20</x>
      <y>20</y>
      <width>171</width>
-     <height>16</height>
+     <height>21</height>
     </rect>
    </property>
    <property name="font">
@@ -138,20 +98,26 @@ font: 8pt &quot;Comic Sans MS&quot;;</string>
     <string>Titulo:</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="txtPostTag">
+  <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>490</x>
-     <y>310</y>
-     <width>113</width>
-     <height>20</height>
+     <x>20</x>
+     <y>80</y>
+     <width>171</width>
+     <height>31</height>
     </rect>
    </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(255, 255, 255);
-font: 8pt &quot;Comic Sans MS&quot;;
-color: rgb(35, 182, 111);
-</string>
+   <property name="font">
+    <font>
+     <family>Comic Sans MS</family>
+     <pointsize>14</pointsize>
+     <weight>50</weight>
+     <italic>false</italic>
+     <bold>false</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Descripción:</string>
    </property>
   </widget>
  </widget>
