--- a/hitagget/viewpost.ui
+++ b/hitagget/viewpost.ui
@@ -13,13 +13,17 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(21, 32, 43);
+color: rgb(255, 255, 255)</string>
+  </property>
   <widget class="QLabel" name="lblPostContent">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>100</y>
+     <y>160</y>
      <width>1021</width>
-     <height>171</height>
+     <height>71</height>
     </rect>
    </property>
    <property name="text">
@@ -64,10 +68,10 @@
   <widget class="QLabel" name="lblPostTitle">
    <property name="geometry">
     <rect>
-     <x>30</x>
+     <x>20</x>
      <y>40</y>
-     <width>1011</width>
-     <height>16</height>
+     <width>1021</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="text">
@@ -77,8 +81,8 @@
   <widget class="QLabel" name="lblContent">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>70</y>
+     <x>20</x>
+     <y>120</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -100,17 +104,20 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>310</y>
+     <y>370</y>
      <width>1031</width>
-     <height>261</height>
+     <height>201</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(28, 44, 58);</string>
    </property>
   </widget>
   <widget class="QLabel" name="lblComments">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>280</y>
+     <y>340</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -131,11 +138,20 @@
   <widget class="QPushButton" name="btnLike">
    <property name="geometry">
     <rect>
-     <x>962</x>
-     <y>260</y>
+     <x>960</x>
+     <y>320</y>
      <width>91</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
    </property>
    <property name="text">
     <string>Me gusta</string>
@@ -144,8 +160,8 @@
   <widget class="QLabel" name="lblLikes">
    <property name="geometry">
     <rect>
-     <x>850</x>
-     <y>270</y>
+     <x>860</x>
+     <y>330</y>
      <width>51</width>
      <height>20</height>
     </rect>
@@ -158,13 +174,57 @@
    <property name="geometry">
     <rect>
      <x>910</x>
-     <y>270</y>
+     <y>330</y>
      <width>41</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string>0</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lblAuthor">
+   <property name="geometry">
+    <rect>
+     <x>820</x>
+     <y>250</y>
+     <width>71</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Comic Sans MS</family>
+     <pointsize>14</pointsize>
+     <weight>50</weight>
+     <italic>false</italic>
+     <bold>false</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Autor:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lblAuthorName">
+   <property name="geometry">
+    <rect>
+     <x>900</x>
+     <y>240</y>
+     <width>141</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Comic Sans MS</family>
+     <pointsize>12</pointsize>
+     <weight>50</weight>
+     <italic>true</italic>
+     <bold>false</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
