--- a/hitagget/principal.ui
+++ b/hitagget/principal.ui
@@ -162,7 +162,7 @@ color: rgb(255, 255, 255);</string>
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>20</y>
+      <y>10</y>
       <width>151</width>
       <height>101</height>
      </rect>
@@ -680,6 +680,60 @@ font: 14pt &quot;Comic Sans MS&quot;;</string>
      <string>Seguir</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="btnLogOut">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>650</y>
+      <width>151</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Comic Sans MS</family>
+      <pointsize>14</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(128, 183, 128);
+color: rgb(255, 255, 255);
+font: 14pt &quot;Comic Sans MS&quot;;</string>
+    </property>
+    <property name="text">
+     <string>Cerrar Sesión</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnShowMyProfile">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>120</y>
+      <width>111</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Arial</family>
+      <pointsize>10</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 10pt &quot;Arial&quot;;
+background-color: rgb(128, 183, 128);
+color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="text">
+     <string>Ver Perfil</string>
+    </property>
+   </widget>
    <zorder>label_9</zorder>
    <zorder>listWidgetCont</zorder>
    <zorder>listWidgetPubli</zorder>
@@ -706,6 +760,8 @@ font: 14pt &quot;Comic Sans MS&quot;;</string>
    <zorder>lblShownUser</zorder>
    <zorder>btnCloseUserProfile</zorder>
    <zorder>btnFollow</zorder>
+   <zorder>btnLogOut</zorder>
+   <zorder>btnShowMyProfile</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
